# Ncoin-Wallet

./: CMakeLists.txt  CNAME  CryptoNoteWallet.cmake  README.md  cmaketime  cmaketime.cmd
Binaries/Linux/: miner  ncoind
src/: Miner.cpp  Settings.cpp  Settings.h  StratumClient.cpp  ncoinwallet.desktop  resources.qrc
src/gui/: AboutDialog.cpp  AddressBookFrame.cpp  MainWindow.cpp  MiningFrame.cpp  MiningFrame.h  NewPoolDialog.cpp  PoolModel.cpp  PoolModel.h
src/gui/ui/: aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  changepassworddialog.ui  exitwidget.ui  mainwindow.ui  miningframe.ui  newaddressdialog.ui  newpassworddialog.ui  newpooldialog.ui  overviewframe.ui  passworddialog.ui  receiveframe.ui  sendframe.ui  transactiondetailsdialog.ui  transactionsframe.ui  transferframe.ui
